--- a/src/main/resources/static/css/style.less
+++ b/src/main/resources/static/css/style.less
@@ -1,37 +1,15 @@
-/*Black translucent Header*/
-.header{
-    height:10%;
-    margin:0px;
-    background-color: rgba(20, 20, 20, 0.6);
-    padding:0px;
-    color:white;
-    font-size:22px;
-    font-family: candara, sans-serif;
-    font-weight: bold;
-    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 12px 37px 0 rgba(0,0,0,0.19);
-}
-.buttonHeader{
-    font-family: Candara, sans-serif;
-    display:inline;
-    float:right;
-    vertical-align:center;
-    padding:0px 5px;
-    margin:0px;
+
+@header-height:60px;
+@transparent-black:rgba(20, 20, 20, 0.6);
+@transparent-black-dark:rgba(20,20,20,0.8);
+
+html{
     height:100%;
-    width:10%;
-    background-color: rgba(20, 20, 20, 0.6);
-    color:white;
-    border-style:solid;
-    border-width:0px 0px 0px 0.5px;
 }
-.buttonHeader:hover{
-    background-color:#303030;
-}
-.buttonHeader:active{
-    background-color:#404040;
-}
+
 /*Body*/
-.body{
+body{
+    font-family: Candara, sans-serif;
     background-image:url("/images/prisma.jpg");
     background-size:cover;
     background-repeat:no-repeat;
@@ -42,18 +20,65 @@
     height: 100%;
     background-color: #f3f3f3;
 }
+
+/*Black translucent Header*/
+.header{
+    height:@header-height;
+    margin:0px;
+    background-color:@transparent-black;
+    padding:0px;
+    color:white;
+    font-size:0px;
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.24), 0 12px 37px 0 rgba(0,0,0,0.19);
+}
+img{
+    margin:10px;
+    width:@header-height - ($margin * 2);
+    height:@header-height - ($margin * 2);
+    display:inline-block;
+}
+.headingText{
+    margin-left:20px;
+    display:inline-block;
+    line-height:@header-height;
+    font-size:30px;
+    position:absolute;
+    font-weight: bold;
+}
+.buttonHeader{
+    font-family: Candara, sans-serif;
+    display:inline;
+    float:right;
+    vertical-align:center;
+    padding:0px 5px;
+    margin:0px;
+    height:100%;
+    width:10%;
+    background-color: @transparent-black-dark;
+    color:white;
+    border-style:solid;
+    border-width:0px 0px 0px 0.5px;
+    cursor: pointer;
+    &:hover{
+        background-color:#303030;
+    }
+    &:active{
+         background-color:#404040;
+     }
+}
+
 /* Navigation panel on the left - black translucent*/
 /*------Windows------*/
 
 /* 1.Blue window*/
-.BlueWindow{
+.taskWindow{
     overflow-y:auto;
     overflow-x:auto;
     margin: 0px 20px 0px 0px;
     height: 80%;
-    background-color: #cccccc;
+    background-color: ;
     padding:10px;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
+    //box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 3px 9px 0 rgba(0,0,0,0.19);
 }
 .inputs{
     font-family: candara, sans-serif;
