--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,1 +1,128 @@
-html{height:100%}body{font-family:Candara,sans-serif;background-image:url(/images/prisma.jpg);background-size:cover;background-repeat:no-repeat;background-color:orange;overflow:auto;margin:0;padding:0;height:100%;background-color:#f3f3f3}.header{height:60px;margin:0;background-color:rgba(20,20,20,.6);padding:0;color:#fff;font-size:0;box-shadow:0 8px 12px 0 rgba(0,0,0,.24),0 12px 37px 0 rgba(0,0,0,.19)}img{margin:10px;width:40px;height:40px;display:inline-block}.headingText{margin-left:20px;display:inline-block;line-height:60px;font-size:30px;position:absolute;font-weight:700}.buttonHeader{font-family:Candara,sans-serif;display:inline;float:right;vertical-align:center;padding:0 5px;margin:0;height:100%;width:10%;background-color:rgba(20,20,20,.8);color:#fff;border-style:solid;border-width:0 0 0 .5px;cursor:pointer}.buttonHeader:hover{background-color:#303030}.buttonHeader:active{background-color:#404040}.taskWindow{overflow-y:auto;overflow-x:auto;margin:0 20px 0 0;height:80%;padding:10px}.inputs{font-family:candara,sans-serif;box-shadow:0 2px 3px 0 rgba(0,0,0,.24),0 3px 9px 0 rgba(0,0,0,.19);background-color:#8080ff;border-style:none;margin:10px;padding:5px;border-width:.5px;text-align:center;overflow:auto}.blueButton{border:0;margin:10px 0 10px 0;box-shadow:0 2px 3px 0 rgba(0,0,0,.24),0 3px 9px 0 rgba(0,0,0,.19);background-color:#0000b3;padding:5px 20px 5px 20px;font-family:Candara,sans-serif;color:#fff;font-size:15px;border-style:none}.blueButton:hover{border-style:none;tansform:translateY(-1px);box-shadow:0 12px 18px 0 rgba(0,0,0,.24),0 17px 55px 0 rgba(0,0,0,.19);background-color:navy;color:#fff}.blueButton:active{border-style:none;transform:translateY(.5px);box-shadow:0 11px 17px 0 rgba(0,0,0,.24),0 16px 54px 0 rgba(0,0,0,.19);background-color:#006;color:#fff}.dropdown{width:18%;color:#fff;font-family:candara,sans-serif;font-size:15px;margin:10px;display:inline;padding:10px;background-color:#0000b3;border-style:none;box-shadow:0 2px 3px 0 rgba(0,0,0,.24),0 3px 9px 0 rgba(0,0,0,.19)}.navigator{background-color:#ccc;height:90%;float:left;width:30%;padding:0;margin:0 5% 0 0;overflow-y:auto;box-shadow:7px 0 15px -5px}
+html {
+  height: 100%; }
+
+/*Body*/
+body {
+  font-family: Candara, sans-serif;
+  background-image: url("/images/prisma.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: orange;
+  overflow: auto;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  background-color: #f3f3f3; }
+
+/*Black translucent Header*/
+.header {
+  height: 50px;
+  margin: 0px;
+  background-color: rgba(20, 20, 20, 0.6);
+  padding: 0px;
+  color: white;
+  font-size: 0px;
+  box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.24), 0 12px 37px 0 rgba(0, 0, 0, 0.19); }
+
+img {
+  margin: 20px;
+  width: 10px;
+  height: 10px;
+  display: inline-block; }
+
+.headingText {
+  margin-left: 20px;
+  display: inline-block;
+  line-height: 50px;
+  font-size: 30px;
+  position: absolute;
+  font-weight: bold; }
+
+.buttonHeader {
+  font-family: Candara, sans-serif;
+  display: inline;
+  float: right;
+  vertical-align: center;
+  padding: 0px 5px;
+  margin: 0px;
+  height: 100%;
+  width: 10%;
+  background-color: rgba(20, 20, 20, 0.8);
+  color: white;
+  border-style: solid;
+  border-width: 0px 0px 0px 0.5px;
+  cursor: pointer; }
+  .buttonHeader:hover {
+    background-color: #303030; }
+  .buttonHeader:active {
+    background-color: #404040; }
+
+/* Navigation panel on the left - black translucent*/
+/* blockly */
+.blocklyArea {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
+/*------Windows------*/
+/* 1.Blue window*/
+.taskWindow {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(100% - $header-height - 1px);
+  background-color: rgba(247, 145, 44, 0.6);
+  padding: 10px;
+  width: 30%;
+  border: 0.5px solid black;
+  position: absolute;
+  top: 50.5px;
+  right: 0px; }
+
+.input {
+  font-family: candara, sans-serif;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.24), 0 3px 9px 0 rgba(0, 0, 0, 0.19);
+  background-color: #8080ff;
+  border-style: none;
+  margin: 10px;
+  padding: 5px;
+  border-width: 0.5px;
+  text-align: center;
+  overflow: auto; }
+
+button {
+  padding: 5px 10px;
+  margin: 5px;
+  cursor: pointer;
+  border: none; }
+
+.orange {
+  background: #f7912c;
+  color: white; }
+  .orange:hover {
+    background: #f9ab5d; }
+  .orange:active {
+    background: #f7912c; }
+
+.dropdown {
+  width: 18%;
+  color: white;
+  font-family: candara, sans-serif;
+  font-size: 15px;
+  margin: 10px;
+  display: inline;
+  padding: 10px;
+  background-color: #0000b3;
+  border-style: none;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.24), 0 3px 9px 0 rgba(0, 0, 0, 0.19); }
+
+.navigator {
+  background-color: #cccccc;
+  height: 90%;
+  float: left;
+  width: 30%;
+  padding: 0px;
+  margin: 0% 5% 0% 0%;
+  overflow-y: auto;
+  box-shadow: 7px 0px 15px -5px; }
+
+/*# sourceMappingURL=style.css.map */
