minor changes and corrections. updated gitignore

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="shortcut icon" type="image/ico" href="bower_components/google-blockly/appengine/favicon.ico"/>
     <script type="text/javascript" src="bower_components/vue/dist/vue.js"></script>
